tdf#168431: Release solar mutex when sending window message to main thread

It started after commit 1e2e51607a163021ef1fb1fb0d217266bd448173 for some
reason, but the problem is, that the caller code from some thread holds
the solar mutex, and the code that handles the message in main VCL thread
tries to lock solar mutex; and that didn't change.

This change introduces some methods in WinSalInstance, that wrap calls to
SendMessageW, and release solar mutex if the functions are not in the main
thread.

Change-Id: Iac8690acbd306273c92534c6d319cbdf4b799860
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191147
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins